--- a/style/style.css
+++ b/style/style.css
@@ -8,13 +8,12 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
-  background: -webkit-gradient(linear, left top, right top, from(#2C1B18), to(#12080A));
-  background: linear-gradient(90deg, #2C1B18, #12080A);
+  background: #2b070a;
 }
 
 a {
   text-decoration: none;
-  color: #12080A;
+  color: #2B070A;
 }
 
 ul {
@@ -38,7 +37,7 @@ i {
   font-size: 1.1em;
   border-radius: 15px;
   background-color: #fff;
-  color: #12080A;
+  color: #2B070A;
   font-weight: 500;
 }
 
@@ -52,7 +51,7 @@ nav {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 20px 50px;
-  border-bottom: 1px solid #12080A;
+  border-bottom: 1px solid #2B070A;
   background: #fff;
 }
 
@@ -130,9 +129,6 @@ nav ul li {
 @media (max-width: 812px) {
   .showcase {
     max-height: 460px;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -141,18 +137,17 @@ nav ul li {
   }
   .showcase p {
     font-size: 2.5em;
-    padding-top: 25%;
+    padding-top: 10%;
+    justify-self: flex-start;
   }
   .showcase .call-to-action {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     width: 100%;
-  }
-  .showcase .call-to-action .btn {
-    width: 50%;
-    margin: 0;
-    border-radius: 0;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
   .showcase .call-to-action .btn:first-child {
     border-right: 1px solid;
@@ -161,70 +156,64 @@ nav ul li {
 }
 
 .home-grid {
-  width: 90%;
-  margin: 30px auto;
+  background: #fff;
+  padding: 10px 30px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  grid-column-gap: 10px;
+  -ms-grid-columns: (25%)[3];
+      grid-template-columns: repeat(3, 25%);
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  color: #2B070A;
 }
 
-.home-grid img {
-  width: 100%;
-  height: 250px;
-  border-radius: 15px;
+.home-grid div {
+  background: #fff;
+  text-align: center;
+  padding: 10px 0;
+  border-radius: 20px;
+}
+
+.home-grid .grid-header {
+  font-size: 1.5em;
+  padding-bottom: 20px;
+}
+
+.home-grid i {
+  padding: 5px 0;
 }
 
 @media screen and (max-width: 812px) {
   .home-grid {
-    display: none;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
   }
 }
 
-.contact {
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(300px, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  padding: 20px 5%;
-  background-color: #12080A;
+.location {
+  width: 90%;
+  margin: auto;
+  background-color: #2b070a;
   color: #fff;
 }
 
-.contact p {
+.location p {
   font-size: 2.5em;
   font-weight: 500;
   padding: 20px 0;
 }
 
-.contact a {
-  color: #fff;
-}
-
-.contact .location iframe {
-  width: 90%;
+.location iframe {
   height: 350px;
   border-radius: 15px;
-}
-
-.contact .contact-info ul li {
-  margin-bottom: 15px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  font-size: 1.1em;
+  width: 100%;
 }
 
 @media screen and (max-width: 820px) {
-  .contact iframe {
+  .location iframe {
     margin: auto;
-  }
-  .contact .contact-info {
-    padding: 20px 0;
-    font-size: 0.9em;
-    line-height: 2;
-    letter-spacing: 2px;
+    border-radius: 10px;
   }
 }
 
@@ -232,7 +221,7 @@ footer {
   padding: 20px 0;
   text-align: center;
   color: #fff;
-  background: #12080A;
+  background: #2b070a;
 }
 
 footer ul {
@@ -255,51 +244,34 @@ footer ul li {
   padding-right: 10px;
 }
 
-.menu-page {
-  background: #fff;
-}
-
-#menu {
-  padding: 20px 0;
-}
-
-#menu p {
-  font-size: 2.5em;
-  text-align: center;
-  color: #fff;
-  font-weight: 500;
+#menu-page main {
+  background: #000;
   padding: 20px;
 }
 
-#menu .gallery {
-  width: 95%;
-  margin: auto;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: (minmax(200px, 2fr))[auto-fill];
-      grid-template-columns: repeat(auto-fill, minmax(200px, 2fr));
-  grid-gap: 10px;
+#menu-page main img {
+  width: 100%;
+  height: 600px;
+  border-radius: 25px;
+  border: 3px solid #fff;
 }
 
-#menu .gallery img {
-  height: 350px;
-  -webkit-transition: 1s;
-  transition: 1s;
-  width: 250px;
-  -webkit-filter: grayscale(25%);
-          filter: grayscale(25%);
+#menu-page main .gallery {
+  width: 80%;
+  margin: 0 auto;
 }
 
-#menu .gallery img:hover {
-  -webkit-filter: none;
-          filter: none;
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+#menu-page .mobile-gallery {
+  display: none;
+  margin: 20px auto;
 }
 
 @media screen and (max-width: 820px) {
-  #menu img {
-    margin: auto;
+  #menu-page .gallery {
+    display: none;
+  }
+  #menu-page .mobile-gallery {
+    display: block;
   }
 }
 /*# sourceMappingURL=style.css.map */
