--- a/style/style.css
+++ b/style/style.css
@@ -31,7 +31,7 @@ i {
 }
 
 .btn {
-  padding: 15px 20px;
+  padding: 15px 25px;
   border: none;
   cursor: pointer;
   font-size: 1.1em;
@@ -58,6 +58,9 @@ nav {
 nav .logo {
   font-size: 20px;
   font-weight: 600;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
 }
 
 nav ul {
@@ -72,18 +75,21 @@ nav ul {
 }
 
 nav ul li {
-  padding-left: 15px;
+  margin-right: 15px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  font-weight: 500;
+}
+
+nav ul li:first-child {
+  padding: 10px;
+  border: 1px solid #2b070a;
 }
 
 @media (max-width: 812px) {
   nav {
-    padding: 20px;
-  }
-  nav li {
-    padding-left: 5px;
+    padding: 20px 10px;
   }
 }
 
@@ -102,15 +108,12 @@ nav ul li {
       -ms-flex-direction: column;
           flex-direction: column;
   text-align: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  height: 90vh;
-  padding-bottom: 50px;
+  height: 70vh;
+  padding: 50px 0;
 }
 
 .showcase p {
-  font-size: 4em;
+  font-size: 4.5em;
   padding-bottom: 20px;
   font-weight: 600;
 }
@@ -121,14 +124,29 @@ nav ul li {
   opacity: 0.8;
 }
 
+.showcase .showcase-list {
+  padding: 0 0 10px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.showcase .showcase-list li {
+  margin-left: 15px;
+}
+
 .showcase .btn {
+  margin-top: 10px;
   margin-left: 10px;
   display: inline-block;
 }
 
 @media (max-width: 812px) {
   .showcase {
-    max-height: 460px;
+    max-height: 400px;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -145,13 +163,10 @@ nav ul li {
     display: -ms-flexbox;
     display: flex;
     width: 100%;
+    margin-top: 50px;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-  }
-  .showcase .call-to-action .btn:first-child {
-    border-right: 1px solid;
-    opacity: 0.8;
   }
 }
 
@@ -196,6 +211,7 @@ nav ul li {
   margin: auto;
   background-color: #2b070a;
   color: #fff;
+  padding-bottom: 10px;
 }
 
 .location p {
@@ -222,6 +238,7 @@ footer {
   text-align: center;
   color: #fff;
   background: #2b070a;
+  border-top: 1px solid #fff;
 }
 
 footer ul {
@@ -246,7 +263,6 @@ footer ul li {
 
 #menu-page main {
   background: #000;
-  padding: 20px;
 }
 
 #menu-page main img {
@@ -259,6 +275,11 @@ footer ul li {
 #menu-page main .gallery {
   width: 80%;
   margin: 0 auto;
+  padding: 20px 0;
+}
+
+#menu-page main footer {
+  background: none;
 }
 
 #menu-page .mobile-gallery {
