--- a/style/style.scss
+++ b/style/style.scss
@@ -50,7 +50,7 @@ i {
 }
 
 .btn {
-    padding: 15px 20px;
+    padding: 15px 25px;
     border: none;
     cursor: pointer;
     font-size: 1.1em;
@@ -71,6 +71,7 @@ nav {
     .logo {
         font-size: 20px;
         font-weight: 600;
+        align-self: center;
     }
 
     ul {
@@ -79,18 +80,22 @@ nav {
         justify-content: flex-end;
 
         li {
-            padding-left: 15px;
+            margin-right: 15px;
             align-self: center;
+            font-weight: 500;
+            
+            &:first-child {
+                padding: 10px;
+                border: 1px solid color(primary);
+            }
         }
 
     }
 
     @media (max-width:812px) {
-        padding: 20px;
+        padding: 20px 10px ;
 
-        li {
-            padding-left: 5px;
-        }
+       
     }
 }
 
@@ -104,12 +109,12 @@ nav {
     display: flex;
     flex-direction: column;
     text-align: center;
-    justify-content: center;
-    height: 90vh;
-    padding-bottom: 50px;
+    // justify-content: center;
+    height: 70vh;
+    padding: 50px 0;
 
     p {
-        font-size: 4em;
+        font-size: 4.5em;
         padding-bottom: 20px;
         font-weight: 600;
 
@@ -120,16 +125,24 @@ nav {
         }
 
     }
+    .showcase-list {
+        padding: 0 0 10px 0;
+        display: flex;
+        justify-content: center;
+        li {
+            margin-left: 15px;
+        }
+     }
 
     .btn {
+        margin-top:10px;
         margin-left: 10px;
         display: inline-block;
     }
 
     @media (max-width:812px) {
 
-        max-height: 460px;
-
+        max-height: 400px;
         flex-direction: column;
         padding: 0;
 
@@ -139,22 +152,15 @@ nav {
             justify-self: flex-start;
 
         }
+        
 
         .call-to-action {
-
             display: flex;
             width: 100%;
+            margin-top: 50px;
             justify-content: center;
 
-            .btn {
-                // width: 50%;
-
-
-                &:first-child {
-                    border-right: 1px solid;
-                    opacity: 0.8;
-                }
-            }
+            
         }
     }
 
@@ -197,6 +203,7 @@ nav {
     margin: auto;
     background-color: color(primary);
     color: color(accent);
+    padding-bottom: 10px;
 
     p {
         font-size: 2.5em;
@@ -232,7 +239,7 @@ footer {
     text-align: center;
     color: #fff;
     background: color(primary);
-
+    border-top: 1px solid #fff;
     ul {
         display: flex;
         justify-content: center;
@@ -254,7 +261,7 @@ footer {
 
     main {
         background: #000;
-        padding: 20px;
+        
 
         img {
             width: 100%;
@@ -266,8 +273,11 @@ footer {
         .gallery {
             width: 80%;
             margin: 0 auto;
+            padding: 20px 0;
 
-
+        }
+        footer {
+            background: none;
         }
     }
 
