--- a/style/style.scss
+++ b/style/style.scss
@@ -84,10 +84,11 @@ nav {
             align-self: center;
             font-weight: 500;
             
-            &:first-child {
-                padding: 10px;
-                border: 1px solid color(primary);
-            }
+            
+        }
+        .menu-link{
+            padding: 10px;
+            border: 1px solid color(primary);
         }
 
     }
@@ -283,7 +284,8 @@ footer {
 
     .mobile-gallery {
         display: none;
-        margin: 20px auto;
+        margin: 0 auto;
+        padding: 20px ;
     }
 
     @media screen and (max-width: 820px) {
