--- a/style/style.css
+++ b/style/style.css
@@ -8,12 +8,12 @@
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 16px;
-  background: #2b070a;
+  background: #000;
 }
 
 a {
   text-decoration: none;
-  color: #2B070A;
+  color: #000;
 }
 
 ul {
@@ -184,7 +184,7 @@ nav ul .menu-link {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  color: #2B070A;
+  color: #000;
 }
 
 .home-grid div {
@@ -213,7 +213,7 @@ nav ul .menu-link {
 .location {
   width: 90%;
   margin: auto;
-  background-color: #2b070a;
+  background-color: #000;
   color: #fff;
   padding-bottom: 10px;
 }
@@ -241,7 +241,7 @@ footer {
   padding: 20px 0;
   text-align: center;
   color: #fff;
-  background: #2b070a;
+  background: #000;
   border-top: 1px solid #fff;
 }
 
