--- a/style/style.css
+++ b/style/style.css
@@ -65,8 +65,8 @@ nav a {
 }
 
 nav .logo {
-  width: 150px;
-  height: 150px;
+  width: 127.5px;
+  height: 170px;
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
@@ -192,11 +192,14 @@ nav ul .menu-link {
   text-align: center;
   padding: 10px 0;
   border-radius: 20px;
+  font-size: 1.1em;
+  font-weight: 400;
 }
 
 .home-grid .grid-header {
   font-size: 1.5em;
   padding-bottom: 20px;
+  font-weight: 500;
 }
 
 .home-grid i {
