--- a/style/style.scss
+++ b/style/style.scss
@@ -79,8 +79,8 @@ nav {
         color: #fff;
     }
     .logo {
-        width:150px;
-        height:150px;
+        width:127.5px;
+        height:170px;
         align-self: center;
     }
 
@@ -187,13 +187,15 @@ nav {
         text-align: center;
         padding: 10px 0;
         border-radius: 20px;
-
+        font-size: 1.1em;
+        font-weight: 400;
 
     }
 
     .grid-header {
         font-size: 1.5em;
         padding-bottom: 20px;
+        font-weight: 500;
     }
 
     i {
@@ -267,9 +269,12 @@ footer {
 #menu-page {
     // background: color(primry);
     background: #000;
+   
+   
     
     main {
         background: #000;
+        
         
 
         img {
